# ai-projects-modularization

./: .gitignore  README.md  penguins-all-in-one.ipynb  penguins.ipynb  pyproject.toml  requirements.txt
.github/workflows/: test.yml
notebooks/: 01_data_exploration.ipynb  02_preprocessing.ipynb  03_model_training.ipynb  04_evaluation.ipynb  config.py  load_data.py  model.py  preprocess.py  test_load_data.py  test_model.py  test_pipeline.py  test_preprocess.py
notebooks/tests/: test_load_data.py  test_model.py  test_pipeline.py  test_preprocess.py
src/: __init__.py  config.py  load_data.py  model.py  preprocess.py
tests/: __init__.py  conftest.py  test_load_data.py  test_model.py  test_pipeline.py  test_preprocess.py
