[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "penguins"
version = "0.1.0"
description = "Ai-projects demo showcasing how to modularize notebooks"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "tensorflow>=2.13.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
    "pytest>=7.0.0",
]

[tool.setuptools]
packages = ["src"]

[tool.setuptools.package-dir]
"src" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
